<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="txtvw_text">My Nanodegree Apps!</string>
    <string name="btn_spotify_text">Spotify Streamer</string>
    <string name="btn_scores_text">Football Scores</string>
    <string name="btn_library_text">Library</string>
    <string name="btn_bigger_text">Build It Bigger</string>
    <string name="btn_xyz_text">XYZ Reader</string>
    <string name="btn_capstone_text">Capstone</string>
</resources>
