<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chrisblackledge.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtvw_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/spotifyAppBtn"
        android:layout_below="@+id/titleText"
        android:text="@string/btn_spotify_text"
        style="@style/LaunchAppButtonStyle" />

    <Button
        android:id="@+id/scoresAppBtn"
        android:layout_below="@+id/spotifyAppBtn"
        android:text="@string/btn_scores_text"
        style="@style/LaunchAppButtonStyle" />

    <Button
        android:id="@+id/libraryAppBtn"
        android:layout_below="@+id/scoresAppBtn"
        android:text="@string/btn_library_text"
        style="@style/LaunchAppButtonStyle" />

    <Button
        android:id="@+id/biggerAppBtn"
        android:layout_below="@+id/libraryAppBtn"
        android:text="@string/btn_bigger_text"
        style="@style/LaunchAppButtonStyle" />

    <Button
        android:id="@+id/xyzAppBtn"
        android:layout_below="@+id/biggerAppBtn"
        android:text="@string/btn_xyz_text"
        style="@style/LaunchAppButtonStyle" />

    <Button
        android:id="@+id/capstoneAppBtn"
        android:layout_below="@+id/xyzAppBtn"
        android:text="@string/btn_capstone_text"
        style="@style/LaunchAppButtonStyle" />

</RelativeLayout>
